tests/ui/pattern/usefulness/issue-2111.stderr
error[E0004]: non-exhaustive patterns: `(None, None)` and `(Some(_), Some(_))` not covered
  --> $DIR/issue-2111.rs:2:11
   |
LL |     match (a, b) {
   |           ^^^^^^ patterns `(None, None)` and `(Some(_), Some(_))` not covered
   |
   = note: the matched value is of type `(Option<usize>, Option<usize>)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         (Some(_), None) | (None, Some(_)) => {},
LL +         (None, None) | (Some(_), Some(_)) => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
